# cplus-gtest

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  housing.cpp  housing.h  housingdriver.cpp
.github/workflows/: cmake-single-platform.yml  linter.yml
tests/: CMakeLists.txt  points_test.cc  sample_test.cc
